--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
+
     <title>Caroline</title>
 </head>
 
@@ -27,23 +29,27 @@
         <div class="main">
             <h2>This is my website and it will guide you through some of the places I love visiting, food that I enjoy
                 cooking, and
-                even show you some of the pets that I would love to have! Hope you enjoy it :D<br></h2>
+                even show you some of the pets that I would love to have! Hope you enjoy it :D</h2>
         </div>
-        <div class="container">
+        <div class="container" tabindex="0">
             <div id="other-page-pets">
-                <h2>Pets<br></h2>
+                <h2>Pets</h2>
+                <img id="animal" src="images/petcat1.jpeg" alt="image of a cat"> 
             </div>
             <div id="other-page-cooking">
                 <h2>Recipes</h2>
+                <img id="food" src="images/foodhtml.jpeg" alt="image of food">
             </div>
             <div id="other-page-travel">
                 <h2>Travel</h2>
+                <img id="travelvac" src="images/vacation.jpeg" alt="image of a vacation spot">
             </div>
         </div>
     </main>
-    <footer>
-        <p>Made by Caroline<br>For SI339 Winter 2024 @ Umich</p>
-    </footer>
+    <script src="js/images.js"></script>
 </body>
+<footer>
+    Made by Caroline for SI339 Winter 2024 @ Umich
+</footer>
 
 </html>
