--- a/travel.html
+++ b/travel.html
@@ -5,6 +5,7 @@
     <!--headings, images, and text (paragraphs, lists, etc.)-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Travel</title>
@@ -31,9 +32,9 @@
             <h2 class="travel-title" >Jeju Island - Korea</h2>
             <img class="image-travel" src="images/jejuIsland.jpeg" width="400" alt="Beautiful hiking trail in Jeju Island, Korea">
             <div class="location-characteristics">
-                <p><br>While Jeju Island may be known more for it's emerald waters and sandy beaches, it also has the
+                <h3>While Jeju Island may be known more for it's emerald waters and sandy beaches, it also has the
                     tallest mountain in Korea at 1,950 meters (6,398 feet). Hallasan Mountain rises up in the center of Jeju
-                    Island and has over 350 volcano shaped peaks. - luxeadventuretraveler.com <br></p>
+                    Island and has over 350 volcano shaped peaks. - luxeadventuretraveler.com </h3>
                 <h3>Things to do: </h3>
                 <ul>
                     <li>Hiking</li>
@@ -46,10 +47,10 @@
             <h2 class="travel-title">Hawaii - USA</h2>
             <img class="image-travel" src="images/hawaii1.jpg" width="400" alt="Beautiful scenery of Hawaii, USA">
             <div class="location-characteristics">
-                <p><br>Hawaii is known for its beautiful beaches—some of them with unusual colors. Many beaches are filled
+                <h3>Hawaii is known for its beautiful beaches—some of them with unusual colors. Many beaches are filled
                     with white sand, but other Hawaiian shores are covered with green, red, pink, and even black sand.
                     Whether you like hiking, biking, kayaking, sailing, swimming, or just sitting on the beach, Hawaii is
-                    the state for you. - nationalgeographic.com</p>
+                    the state for you. - nationalgeographic.com</h3>
                 <h3>Things to do: </h3>
                 <ul>
                     <li>Hiking</li>
@@ -62,10 +63,10 @@
         <div class="travel-div">
             <h2 class="travel-title">Cannes - France</h2>
             <img class="image-travel" src="images/Cannes-waterfront.jpg" width="400" alt="Beautiful scenery of Cannes, France">
-            <div class="location-characteristics"> <p><br> Cannes, a resort town on the French Riviera, is famed for its international film festival. Its
+            <div class="location-characteristics"> <h3> Cannes, a resort town on the French Riviera, is famed for its international film festival. Its
                 Boulevard de la Croisette, curving along the coast, is lined with sandy beaches, upmarket boutiques and
                 palatial hotels. It’s also home to the Palais des Festivals et des Congrès, a modern building complete
-                with red carpet and Allée des Étoiles – Cannes’ walk of fame. ― Google<br></p>
+                with red carpet and Allée des Étoiles – Cannes’ walk of fame. ― Google</h3>
             <h3>Things to do: </h3>
             <ul>
                 <li>Sailing</li>
@@ -75,7 +76,7 @@
         </div></div>
     </main>
     <footer>
-        <p>Made by Caroline<br>For SI339 Winter 2024 @ Umich</p>
+        Made by Caroline for SI339 Winter 2024 @ Umich
     </footer>
 </body>
 
